# fastabxed

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/fastabx/: cell.py  dataset.py  distance.py  ed.py  score.py  verify.py  zerospeech.py
src/fastabx/csrc/: ed.cpp
