[build-system]
requires = ["setuptools>=80.9.0", "torch>=2.6.0", "numpy>=2.0.2", "ninja>=1.11"]
build-backend = "setuptools.build_meta"

[project]
name = "fastabxed"
version = "0.4.0+fastabxed.1"
description = "A (forked) library for efficient computation of ABX discriminability using edit distance"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Maxime Poli" }, { name = "Nicol Visser" }]
license = "MIT"
dependencies = [
    "numpy>=2.0.2",
    "polars>=1.26.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastabx*"]

[tool.poetry]
packages = [
    { include = "fastabx", from = "src" }
]